# kovi-plugin-60s

./: Cargo.toml  README.en.md  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/model/: mod.rs
