[package]
name = "kovi-plugin-60s"
version = "0.1.5"
edition = "2024"

description = "kovi plugin"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yiranxiaohui/kovi-plugin-60s"
repository = "https://github.com/yiranxiaohui/kovi-plugin-60s"
documentation = "https://docs.rs/kovi-plugin-60s"


[dependencies]
kovi = ">=0.12.5"
reqwest = { version = "0.12.24", features = ["default", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"